TestSuite/PascalABCTests/errors/err0251.pas
type
  t1 = class 
    
    constructor := exit;
    
    procedure p1(a: set of record end) := exit;
    
  end;

begin end.